<resources>
    <string name="app_name">Flip</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="radio_color">Colores</string>
    <string name="radio_number">Números</string>
    <string name="check_sound">Sonido</string>
    <string name="check_vibrate">Vibración</string>
    <string name="startPlay">Jugar</string>

    <string name="num_elem_x">Número elementos en X </string>
    <string name="num_elem_y">Número elementos en Y </string>
    <string name="num_colors">Número tramas </string>

    <string name="title_about">Acerca de </string>
    <string name="title_howto">Cómo jugar a </string>

    <string name="game_end_1">Se finalizó el juego con un total de</string>
    <string name="game_end_2"> pulsaciones</string>
    <string name="score_clicks">Número de pulsaciones: </string>

    <string name="menu_howto">Ayuda</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_player">Jugador</string>

    <string name="config_play">Configuración de Flip</string>


    <string-array name="Tags">
        <item>Play</item>
    </string-array>
</resources>
